; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/svg/extr_svg-run.c_svg_run_g.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/svg/extr_svg-run.c_svg_run_g.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32*)* @svg_run_g to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @svg_run_g(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i32*, i32** %10, align 8
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %11, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = call i32 @svg_parse_common(i32* %15, i32* %16, i32* %17, i32* %11)
  %19 = load i32*, i32** %9, align 8
  %20 = call i32* @fz_xml_down(i32* %19)
  store i32* %20, i32** %12, align 8
  br label %21

21:                                               ; preds = %30, %5
  %22 = load i32*, i32** %12, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %33

24:                                               ; preds = %21
  %25 = load i32*, i32** %6, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i32*, i32** %12, align 8
  %29 = call i32 @svg_run_element(i32* %25, i32* %26, i32* %27, i32* %28, i32* %11)
  br label %30

30:                                               ; preds = %24
  %31 = load i32*, i32** %12, align 8
  %32 = call i32* @fz_xml_next(i32* %31)
  store i32* %32, i32** %12, align 8
  br label %21

33:                                               ; preds = %21
  ret void
}

declare dso_local i32 @svg_parse_common(i32*, i32*, i32*, i32*) #1

declare dso_local i32* @fz_xml_down(i32*) #1

declare dso_local i32 @svg_run_element(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32* @fz_xml_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
